@@ -4,24 +4,26 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
+import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.storage.FilmStorage;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.UserStorage;
 
+import java.time.LocalDate;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class FilmService {
 
+    private static final LocalDate FOUNDATION_OF_FILMS = LocalDate.of(1895, 12, 28);
+
     private final FilmStorage filmStorage;
     private final UserStorage userStorage;
 
     public Film like(int id, int userId) {
-        log.trace("Получение фильма по id");
         Film film = filmStorage.getById(id);
         if (film == null) {
             log.error("Фильм с id = {} не найден", id);
@@ -32,15 +34,11 @@ public class FilmService {
             log.error("Пользователь с id = {} не найден", userId);
             throw new NotFoundException(String.format("Пользователь с id = %d не найден", userId));
         }
-        log.trace("Получение списка лайков");
         Set<Integer> likes = film.getLikes();
-        log.trace("Добавление лайка в список");
         likes.add(userId);
-        log.trace("Обновление списка");
         film.setLikes(likes);
-        log.trace("Обновление фильма");
         filmStorage.update(film);
-        log.info("Лайк успешно поставлен");
+        log.info("Лайк успешно поставлен: {}", film);
         return film;
     }
 
@@ -55,33 +53,40 @@ public class FilmService {
             log.error("Пользователь с id = {} не найден", userId);
             throw new NotFoundException(String.format("Пользователь с id = %d не найден", userId));
         }
-        log.trace("Получение списка лайков");
         Set<Integer> likes = film.getLikes();
-        log.trace("Удаление лайка из списка");
         likes.remove(userId);
-        log.trace("Обновление списка");
         film.setLikes(likes);
-        log.trace("Обновление фильма");
         filmStorage.update(film);
-        log.info("Лайк успешно удалён");
+        log.info("Лайк успешно удалён: {}", film);
         return film;
     }
 
     public List<Film> getMostPopular(int count) {
-        log.info("Возврат списка самых популярных фильмов");
-        return getAll().stream()
+        List<Film> mostPopular = filmStorage.getAll().stream()
                 .filter(film -> !film.getLikes().isEmpty())
                 .sorted(Comparator.comparingInt((Film f) -> f.getLikes().size()).reversed())
                 .limit(count)
-                .collect(Collectors.toList());
+                .toList();
+        log.info("Возврат списка самых популярных фильмов: {}", mostPopular);
+        return mostPopular;
     }
 
     public Film add(Film film) {
+        if (film.getReleaseDate().isBefore(FOUNDATION_OF_FILMS)) {
+            log.error("Некорректнвя дата релиза фильма: {}", film.getReleaseDate());
+            throw new ValidationException("Некорректная дата релиза");
+        }
         return filmStorage.add(film);
     }
 
     public Film update(Film film) {
-        return filmStorage.update(film);
+        if (film.getReleaseDate().isBefore(FOUNDATION_OF_FILMS)) {
+            log.error("Некорректнвя дата релиза фильма: {}", film.getReleaseDate());
+            throw new ValidationException("Некорректная дата релиза");
+        }
+        Film updated = filmStorage.update(film);
+        log.info("Фильм успешно обновлён: {}", updated);
+        return updated;
     }
 
     public Film delete(int id) {
@@ -89,11 +94,17 @@ public class FilmService {
     }
 
     public List<Film> getAll() {
-        log.info("Возврат списка всех фильмов");
-        return new ArrayList<>(filmStorage.getAll().values());
+        log.info("Возврат списка всех фильмов: {}", filmStorage.getAll());
+        return filmStorage.getAll();
     }
 
     public Film getById(int id) {
-        return filmStorage.getById(id);
+        Film film = filmStorage.getById(id);
+        if (film == null) {
+            log.error("Фильм с id = {} не найден", id);
+            throw new NotFoundException(String.format("Фильм с id = %d не найден", id));
+        }
+        log.info("Фильм получен: {}", film);
+        return film;
     }
 }
